--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,8 @@
         <a href="{{ url_for('display_page') }}">Display</a>
         <a href="{{ url_for('spotify_config') }}">Spotify</a>
         <a href="{{ url_for('mappings') }}">Mappings</a>
-        <a href="{{ url_for('simulate') }}">Simulate</a>
+  <a href="{{ url_for('simulate') }}">Simulate</a>
+  <a href="{{ url_for('settings') }}">Settings</a>
       </nav>
     </header>
     <main>
