Change album artwork caching logic to reduce CPU overhead if a valid cached art file exists.  Added pause support for animations.  Start refactoring the WebUI to move settings into the settings page.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
     <header>
       <h1>JellyJam NFC Player</h1>
       <nav>
-        <a href="{{ url_for('index') }}">Home</a>
+  <a href="{{ url_for('index') }}">Now Playing</a>
         <a href="{{ url_for('display_page') }}">Display</a>
         <a href="{{ url_for('spotify_config') }}">Spotify</a>
         <a href="{{ url_for('mappings') }}">Mappings</a>
