--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,7 @@
         <a href="{{ url_for('spotify_config') }}">Spotify</a>
         <a href="{{ url_for('mappings') }}">Mappings</a>
         <a href="{{ url_for('simulate') }}">Simulate</a>
+        <a href="{{ url_for('audiobooks_page') }}">Audiobooks</a>
         <a href="{{ url_for('settings') }}">Settings</a>
       </nav>
     </header>
